<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/item_search"
        android:icon="@drawable/ic_magnify"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/item_settings"
        android:title="@string/settings"
        android:icon="@drawable/ic_settings"
        app:showAsAction="collapseActionView"/>

    <item
        android:id="@+id/item_export_to_file"
        android:title="@string/export_to_file"
        android:icon="@drawable/ic_file_export"
        app:showAsAction="collapseActionView"/>

    <item
        android:id="@+id/item_import_into_database"
        android:title="@string/import_into_database"
        android:icon="@drawable/ic_database_import"
        app:showAsAction="collapseActionView"/>

    <item
        android:id="@+id/item_about"
        android:title="@string/about_the_program"
        android:icon="@drawable/ic_information"
        app:showAsAction="collapseActionView"/>
</menu>