<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/value_8dp"
    tools:context=".views.NewOrUpdateEventActivity">

    <TextView
        android:id="@+id/type_title"
        style="@style/TextViewTitleStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:text="@string/event_type"
        android:textAlignment="center" />

    <RadioGroup
        android:id="@+id/radio_buttons_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/type_title"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio_birthday"
            style="@style/TextSubTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/birthday" />

        <RadioButton
            android:id="@+id/radio_anniversary"
            style="@style/TextSubTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/anniversary" />

        <RadioButton
            android:id="@+id/radio_holiday"
            style="@style/TextSubTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/holiday" />

    </RadioGroup>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/radio_buttons_container"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp">

        <EditText
            android:id="@+id/person_name"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:autofillHints=""
            android:hint="@string/name"
            android:inputType="textCapWords"
            android:textColorHint="@color/colorWaikawaGrayOpacity50"
            app:layout_constraintBottom_toBottomOf="@id/pick_contact_btn"
            app:layout_constraintEnd_toStartOf="@id/pick_contact_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/pick_contact_btn"
            tools:targetApi="O" />

        <ImageButton
            android:id="@+id/pick_contact_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/pick_contact_background"
            android:contentDescription="@string/pick_contact_btn_description"
            android:padding="@dimen/value_16dp"
            android:src="@drawable/ic_account_search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:autofillHints=""
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:textColorHint="@color/colorWaikawaGrayOpacity50"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/person_name"
            tools:targetApi="O" />

        <LinearLayout
            android:id="@+id/date_picker_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phone">

            <TextView
                android:id="@+id/select_date_title"
                style="@style/TextViewTitleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_of_celebration"
                android:textAlignment="center" />

            <DatePicker
                android:id="@+id/date_picker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:calendarViewShown="false"
                android:datePickerMode="spinner" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/save_btn"
        style="@style/ButtonsStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:text="@string/save" />

</RelativeLayout>