<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/value_8dp">

    <Switch
        android:id="@+id/reminder_on_off"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:fontFamily="@font/roboto_black"
        android:text="@string/switch_reminder"
        android:textColor="@color/colorCocoaBean"
        android:textSize="@dimen/size_18sp" />

    <RadioGroup
        android:id="@+id/radio_group_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reminder_on_off"
        android:layout_marginStart="@dimen/value_16dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radio_same_day"
            style="@style/ReminderRadioButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remind_on_same_day" />

        <RadioButton
            android:id="@+id/radio_the_day_before"
            style="@style/ReminderRadioButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remind_the_day_before" />

        <RadioButton
            android:id="@+id/radio_two_days_before"
            style="@style/ReminderRadioButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remind_2_days_before" />
    </RadioGroup>

    <TextView
        android:id="@+id/reminder_time_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radio_group_container"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:fontFamily="@font/roboto_black"
        android:layout_marginTop="@dimen/value_16dp"
        android:text="@string/reminder_time"
        android:textAlignment="center"
        android:textColor="@color/colorCocoaBean"
        android:textSize="@dimen/size_18sp" />

    <TimePicker
        android:id="@+id/reminder_time_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reminder_time_title"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="8dp"
        android:timePickerMode="spinner" />

    <Button
        android:id="@+id/save_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@android:string/ok"
        style="@style/ButtonsStyle"/>

</RelativeLayout>